--- a/Raymond G Feilner Jr - Resume.html
+++ b/Raymond G Feilner Jr - Resume.html
@@ -9,9 +9,9 @@
 		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Resume"/>
 		<meta property="fb:admins" content="USER_ID"/>
-		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Technical Resume"/>
+		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Resume"/>
 		<link rel="icon" href="icon.ico" type="image/x-icon">
-		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, Data Scientist, Data Analyst, Web Developer, Web Designer, Full-stack, Quantitative Psychologist, Python, R, HTML, CSS, JavaScript, Ada, C, PHP, Perl, Ruby on Rails, Database Management, Educator, Author">
+		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, Data Scientist, Data Analyst, Web Developer, Web Designer, Full-stack, Quantitative Psychologist, Cognitive Scientist, Developmental Psychologist, Python, R, HTML, CSS, JavaScript, Ada, C, PHP, Perl, Ruby on Rails, Database Management, Educator, Author">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
 		<!--<script src="main.js"></script>-->
@@ -62,6 +62,20 @@
 		<section id="objective">I help people apply evidence-based practices to ask structured questions. Then, I gather proper evidence. I evaluate the data, using appropriate computational and statistical tools. I effectively interpret and communicate those results. I apply those results into practice in a manner customized to the unique problem. I utilize subsequent feedback to improve or maintain those interventions. In doing so, I aim to effectively manage, improve, and further integrate our systems of technological, social, and cognitive tools. </section>
 		<section id="professional">
 			<h2 class="header">Professional Background</h2>
+			<div class="subsection">
+				<h3 class="main_item">Adjunct Professor of Psychology</h3>
+				<span class="submain">St. Louis Community College</span>
+				<span class="date">
+					<span class="start_date">January 2022</span>
+					<span> - </span>
+					<span class="end_date">Present</span>
+				</span>
+				<ul>
+					<li class="bulleted">Promote student achievements in General Psychology, Human Growth & Development, and Abnormal Psychology</li>
+					<li class="bulleted">Guide and mentor undergraduate honor students in research projects in psychology</li>
+					<li class="bulleted">Utilize a variety of pedagogical techniques to teach in-person, online asynchronous, and live virtual lecture formats</li>
+				</ul>
+			</div>
 			<div class="subsection">
 				<h3 class="main_item">Data Analyst, Full-stack Web Developer, Graphic Designer</h3>
 				<span class="submain">Portenzo</span>
@@ -220,10 +234,12 @@
  					 <span class="date">Graduation Date: May 2006</span>
  				 </div>
  				 <ul>
- 					 <li class="bulleted">Bachelor of Science in <b>Mathematics</b></li>
- 					 <li class="bulleted">Bachelor of Arts in <b>Spanish</b></li>
- 					 <li class="bulleted">Minor in <b>Statistical Methods</b></li>
- 					 <li class="bulleted">Minor in <b>Computer Science</b></li>
+					 <li class="bulleted">Bachelor of Science in <b>Mathematics</b></li>
+					 <li class="bulleted">Bachelor of Science in <b>Psychology</b></li>
+					 <li class="bulleted">Bachelor of Science in <b>English: Linguistics</b></li>
+					 <li class="bulleted">Bachelor of Arts in <b>Spanish</b></li>
+					 <li class="bulleted">Minor in <b>Statistical Methods</b></li>
+					 <li class="bulleted">Minor in <b>Computer Science</b></li>
  				 </ul>
  			</div>
 		</section>
